# defensive-systems-open-uni-client-side

./: .gitignore  AESWrapper.cpp  AESWrapper.h  AesKeyWrap.cpp  AesKeyWrap.h  Base64Wrapper.cpp  Base64Wrapper.h  CMakeLists.txt  CryptoHandler.cpp  CryptoHandler.h  FileHandler.cpp  FileHandler.h  Logger.cpp  Logger.h  ProtocolHandler.cpp  ProtocolHandler.h  README.md  RSAWrapper.cpp  RSAWrapper.h  checksum.cpp  checksum.h  constants.h  main.cpp  transfer.info
